--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="shortcut icon" type="image/x-icon" href="images/cloud.ico" />
-<title>everything i daydreamed</title>
+<link rel="shortcut icon" type="image/x-icon" href="../cloud.ico" />
 </head>
 <body>
 
 <p>everything i daydreamed</p>
 
 </body>
-<script src="https://www.gstatic.com/firebasejs/5.7.0/firebase.js"></script>
+<!-- <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase.js"></script> -->
 <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-firestore.js"></script>
 <script>
