--- a/index.html
+++ b/index.html
@@ -49,25 +49,9 @@
           <h1 class="mb-5 blogtitle">everything i daydreamed...</h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <!-- Search form -->
-          <form class="form-inline md-form form-sm active-pink active-pink-2 mt-2">
-            <i class="fas fa-search" aria-hidden="true"></i>
-            <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" aria-label="Search">
-          </form>
-          <!-- Search form -->
-          <!-- <div class="md-form mt-0">
-            <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-          </div> -->
-          <!-- <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Search by Hashtag...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-              </div>
-            </div>
-          </form> -->
+          <div class="search__container">
+              <input class="search__input" type="text" placeholder="Search By #Hashtag">
+          </div>
         </div>
       </div>
     </div>
