running config test

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Everything I Daydreamed</title>
+  <title>Jordan Chisam</title>
   <link rel="shortcut icon" type="image/x-icon" href="images/cloud.ico" />
 
   <!-- Bootstrap core CSS -->
@@ -46,7 +46,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5 blogtitle">everything i daydreamed...</h1>
+          <h1 class="mb-5 blogtitle">jordan chisam</h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <div class="search__container">
